Added The Assembler and ajusted the previous strats

--- a/levels/C/C2.md
+++ b/levels/C/C2.md
@@ -4,12 +4,12 @@
 
 ## Cloud skip strat
 
-`Time` **00:13:500** `Difficulty` ★★★★☆
+`Time` **00:13.500** `Difficulty` ★★★★☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
   ![gif](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C2_CloudSkip.webp)
 
   **Notes**
-  - To skip the cloud, you have to get some rightward momentum going on the cloud before you bounce off. It's hard to tell if you are getting it or not. It's not really worth it.
+  - To skip the cloud, you have to get some rightward momentum going on the cloud before you bounce off. But not so much that it crashes you into the glitch block. It's hard to tell if you are getting it or not. It's not really worth it.
 </details>
