--- a/levels/C/C4.md
+++ b/levels/C/C4.md
@@ -4,7 +4,7 @@
 
 ## Cloud bonk strat
 
-`Time` **00:08:800** `Difficulty` ★★★★★
+`Time` **00:08.800** `Difficulty` ★★★★☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
@@ -17,7 +17,7 @@
 ---
 ## Cloud hug strat
 
-`Time` **00:09:600** `Difficulty` ★★★☆☆
+`Time` **00:09.600** `Difficulty` ★★★☆☆
 <details>
   <summary>Click to show/hide the strat</summary>
 
@@ -31,7 +31,7 @@
 ---
 ## Casual strat
 
-`Time` **00:11:100** `Difficulty` ★☆☆☆☆
+`Time` **00:11.100** `Difficulty` ★☆☆☆☆
 <details>
   <summary>Click to show/hide the strat</summary>
 
