--- a/levels/C/C1.md
+++ b/levels/C/C1.md
@@ -4,7 +4,7 @@
 
 ## Cloud skip strat
 
-`Time` **00:07:500** `Difficulty` ★★★★☆
+`Time` **00:07.500** `Difficulty` ★★★☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
