New strats, mostly in LCD

--- a/levels/C/C4.md
+++ b/levels/C/C4.md
@@ -4,10 +4,23 @@
 
 [< Back (C3)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/C/C3.md) | [Next (C5) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/C/C5.md)
 
+## Double half-jump strat
+
+`Time` **00:07.500** `Difficulty` ★★★★★
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C4_DoubleHalfJump.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C4_DoubleHalfJump.mp4?raw=true)
+
+  **Notes**
+  - Getting half-jumps on a cloud is very precise, so good luck getting two in a row.
+</details>
+
+---
 ## Cloud bonk strat
 
 `Time` **00:08.800** `Difficulty` ★★★★☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C4_CloudBonk.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C4_CloudBonk.mp4?raw=true)
