--- a/levels/T/T3.md
+++ b/levels/T/T3.md
@@ -14,4 +14,5 @@
 
   **Notes**
   - Before the last jump over the two glitch blocks, make sure you wait a few frames on the wall or you might not have enough height to fly over the glitch blocks.
+  - We also found you can save a few frames by jumping over the two glitch blocks on the left with a quick wall jump instead of jumping to the opposite wall, but it's a bit too risky for what you gain.
 </details>
