--- a/levels/T/T5.md
+++ b/levels/T/T5.md
@@ -4,10 +4,25 @@
 
 [< Back (T4)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/T/T4.md) | [Next (C0) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/C/C0.md)
 
-## Strat
+## Optimized strat
+
+`Time` **00:15.800** `Difficulty` ★★★★☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_OptimizedStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_OptimizedStrat.mp4?raw=true)
+
+  **Notes**
+  - Remember to cancel your jumps when you don't need full height.
+  - The wall jumps over the glitch blocks on the left wall look scary... and they are. You have to time your wall jumps right to make it past them. This is what makes it such a difficult strat.
+  - Outside the tower, make sure to get the jumps across the gaps early or you'll have to stop your horizontal momentum.
+</details>
+
+---
+## Normal strat
 
 `Time` **00:17.200** `Difficulty` ★☆☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_Strat.mp4?raw=true)
