--- a/levels/any_ml/A/A3.md
+++ b/levels/any_ml/A/A3.md
@@ -7,7 +7,7 @@
 ## Safe strat
 
 `Time` **00:08.650** `Difficulty` ★☆☆☆☆
-<details>
+<details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A3_SafeStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A3_SafeStrat.mp4?raw=true)
