--- a/levels/any_ml/A/A5.md
+++ b/levels/any_ml/A/A5.md
@@ -7,7 +7,7 @@
 ## Strat
 
 `Time` **00:19.000** `Difficulty` ★★☆☆☆
-<details>
+<details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A5_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A5_Strat.mp4?raw=true)
