--- a/levels/any_ml/pp/PP12.md
+++ b/levels/any_ml/pp/PP12.md
@@ -7,7 +7,7 @@
 ## Strat
 
 `Time` **00:15.900** `Difficulty` ★☆☆☆☆
-<details>
+<details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_Strat.mp4?raw=true)
