--- a/levels/any_ml/pp/PP13.md
+++ b/levels/any_ml/pp/PP13.md
@@ -7,7 +7,7 @@
 ## Dual-cartridge strat
 
 `Time` **00:10.900** `Difficulty` ★★★☆☆
-<details>
+<details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_DualStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_DualStrat.mp4?raw=true)
