--- a/levels/any_sh/C/C2.md
+++ b/levels/any_sh/C/C2.md
@@ -6,12 +6,24 @@
 
 ## Cloud skip strat
 
-`Time` **00:13.500** `Difficulty` ★★★★☆
+`Time` **00:12.100** `Difficulty` ★★★★☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C2_CloudSkip.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C2_CloudSkip.mp4?raw=true)
 
   **Notes**
-  - To skip the cloud, you have to get some rightward momentum going on the cloud before you bounce off. But not so much that it crashes you into the glitch block. It's hard to tell if you are getting it or not. It's not really worth it.
+  - This strat might not be worth the risk. It only saves a second. Consider using the safe strat instead.
+  - The first trick is to go under the glitch instead of over the glitch on the 4th cloud bounce. The timing is pretty precise, as always when running off clouds.
+  - The second trick is the cloud skip that comes right after. You have to get some rightward momentum going on the cloud before you bounce off. But not so much that it crashes you into the glitch block. It's hard to tell if you are getting it or not.
+</details>
+
+---
+## Safe strat
+
+`Time` **00:13.100** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C2_NormalStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C2_NormalStrat.mp4?raw=true)
 </details>
