Discovery of the SD storage technique

--- a/levels/any_sh/pp/PP13.md
+++ b/levels/any_sh/pp/PP13.md
@@ -25,3 +25,17 @@
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_S_EasyStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_S_EasyStrat.mp4?raw=true)
 </details>
+
+---
+## SD storage strat
+
+`Time` **00:10.600** `Difficulty` ★★★★★
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_SDStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_SDStrat.mp4?raw=true)
+
+  **Notes**
+  - This strat uses SD Storage. You can learn more about it in the "Jump cart techs" section of this guide.
+  - Don't go for this one, it's way too risky and hard to execute.
+</details>
