--- a/levels/any_ml/pp/PP13.md
+++ b/levels/any_ml/pp/PP13.md
@@ -4,10 +4,24 @@
 
 [< Back (PP12)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/any_ml/pp/PP12.md) | [Next (PP14) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/any_ml/pp/PP14.md)
 
+## SD storage strat
+
+`Time` **00:10.600** `Difficulty` ★★★★★
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_SDStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_SDStrat.mp4?raw=true)
+
+  **Notes**
+  - This strat uses SD Storage. You can learn more about it in the "Jump cart techs" section of this guide.
+  - Don't go for this one, it's way too risky and hard to execute.
+</details>
+
+---
 ## Dual-cartridge strat
 
 `Time` **00:10.900** `Difficulty` ★★★☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_DualStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_DualStrat.mp4?raw=true)
