Optimized dusty strats on T/C/A

--- a/levels/any_ml/A/A5.md
+++ b/levels/any_ml/A/A5.md
@@ -6,13 +6,13 @@
 
 ## Strat
 
-`Time` **00:19.000** `Difficulty` ★★☆☆☆
+`Time` **00:17.800** `Difficulty` ★★☆☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A5_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A5_Strat.mp4?raw=true)
 
   **Notes**
-  - Somewhat of a precise stage - be careful not to jump too high or too low, but you can adjust in a variety of ways if your position isn't exactly right.
-  - Depending on your grappling angles, you can go well below 00:19.000.
+  - A very optimization-heavy stage - be careful not to jump too high or too low, but you can adjust in a variety of ways if your position isn't exactly right.
+  - Clearing that first section without touching the ground saves you some time because it means you fall faster on the right side.
 </details>
