--- a/levels/any_ml/C/C0.md
+++ b/levels/any_ml/C/C0.md
@@ -4,14 +4,28 @@
 
 [< Back (T5)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/any_ml/T/T5.md) | [Next (C1) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/any_ml/C/C1.md)
 
-## Cloud skip strat
+## Normal strat
 
-`Time` **00:10.600** `Difficulty` ★★☆☆☆
+`Time` **00:09.900** `Difficulty` ★☆☆☆☆
 <details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C0_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C0_Strat.mp4?raw=true)
+
+  **Notes**
+  - Getting a half-jump on the first cloud saves a bit.
+</details>
+
+---
+## Coyote jump strat
+
+`Time` **00:10.100** `Difficulty` ★★☆☆☆
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C0_CloudSkip.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C0_CloudSkip.mp4?raw=true)
 
   **Notes**
+  - This is almost as fast as the other strat, but maybe a little bit more risky.
   - To skip the cloud, you have to make sure you're jumping after falling, near the end of your coyote time period.
 </details>
