--- a/levels/any_ml/C/C2.md
+++ b/levels/any_ml/C/C2.md
@@ -6,7 +6,7 @@
 
 ## Cloud skip strat
 
-`Time` **00:12.100** `Difficulty` ★★★★☆
+`Time` **00:12.100** `Difficulty` ★★★☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
