--- a/levels/any_ml/T/T1.md
+++ b/levels/any_ml/T/T1.md
@@ -6,7 +6,7 @@
 
 ## Optimized strat
 
-`Time` **00:08.100** `Difficulty` ★☆☆☆☆
+`Time` **00:07.600** `Difficulty` ★★☆☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
@@ -14,7 +14,7 @@
 
   **Notes**
   - Jumping over the glitch block with a quick wall jump here is faster.
-  - You can even get corner boosts for more time saves.
+  - The corner boost near the end saves even more time.
 </details>
 
 ---
