--- a/levels/any_ml/A/A8.md
+++ b/levels/any_ml/A/A8.md
@@ -6,12 +6,12 @@
 
 ## Strat
 
-`Time` **00:10.500** `Difficulty` ★★☆☆☆
+`Time` **00:09.800** `Difficulty` ★★☆☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A8_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A8_Strat.mp4?raw=true)
 
   **Notes**
-  - The key in this level is to avoid losing too much time waiting to drop down to the ground from a hook jump.
+  - At the start, the key is to avoid losing too much time waiting to drop down to the ground from a hook jump.
 </details>
