--- a/levels/any_ml/T/T4.md
+++ b/levels/any_ml/T/T4.md
@@ -6,12 +6,9 @@
 
 ## Strat
 
-`Time` **00:11.400** `Difficulty` ★★☆☆☆
+`Time` **00:10.600** `Difficulty` ★☆☆☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T4_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T4_Strat.mp4?raw=true)
-
-  **Notes**
-  - The jump in the last section looks kind of scary but it really isn't dangerous if you make sure to jump during coyote time (the timing is really lenient).
 </details>
