--- a/levels/any_sh/C/C3.md
+++ b/levels/any_sh/C/C3.md
@@ -6,9 +6,13 @@
 
 ## Cloud skip strat
 
-`Time` **00:13.000** `Difficulty` ★☆☆☆☆
+`Time` **00:11.800** `Difficulty` ★☆☆☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C3_CloudSkip.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C3_CloudSkip.mp4?raw=true)
+
+  **Notes**
+  - Instead of half-bounces, you can just cancel your jumps.
+  - Sometimes, the first cloud won't give you enough height to reach the third cloud. Be on the lookout for that. It's kind of random.
 </details>
