--- a/levels/any_sh/T/T2.md
+++ b/levels/any_sh/T/T2.md
@@ -6,12 +6,12 @@
 
 ## Strat
 
-`Time` **00:12.000** `Difficulty` ★☆☆☆☆
+`Time` **00:10.400** `Difficulty` ★★☆☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T2_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T2_Strat.mp4?raw=true)
 
   **Notes**
-  - Corner boosts on the crumbling platforms outside the tower might save time but are inconsistent.
+  - The corner boosts on the crumbling platforms outside the tower save over a second and are pretty consistent (at least the first one).
 </details>
