--- a/levels/any_sh/T/T5.md
+++ b/levels/any_sh/T/T5.md
@@ -4,10 +4,24 @@
 
 [< Back (T4)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/any_sh/T/T4.md) | [Next (C0) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/any_sh/C/C0.md)
 
-## Optimized strat
+## Corner boost strat
+
+`Time` **00:15.400** `Difficulty` ★★★☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_CornerBoostStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_CornerBoostStrat.mp4?raw=true)
+
+  **Notes**
+  - Using a corner boost, we can reach the first ledge on the stairway.
+  - It's pretty lenient, but still hard to get. If you don't get the corner boost, you can still fallback to the glitch jump strat.
+</details>
+
+---
+## Glitch jump strat
 
 `Time` **00:15.800** `Difficulty` ★★★☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_OptimizedStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_OptimizedStrat.mp4?raw=true)
