Optimized strats from PP

--- a/levels/any_ml/pp/PP12.md
+++ b/levels/any_ml/pp/PP12.md
@@ -6,14 +6,15 @@
 
 ## Strat
 
-`Time` **00:15.900** `Difficulty` ★★☆☆☆
+`Time` **00:13.400** `Difficulty` ★★☆☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_Strat.mp4?raw=true)
 
   **Notes**
+  - Another optimization-heavy level. Don't rush it too much at first because it's easy to die and lose a lot of time. Try to find a rhythm that you're comfortable with, and you can always come back later to try and improve it.
   - You can use the cable as shown in the video to help keep momentum or recover from a bad dash.
-  - In the vertical battery section, be careful not to dash too quickly, you need to time your dashes properly so you can reach the next battery. It's easy to lose a bunch of time to this section.
-  - You can also use one or two SD storage dashes in the vertical section to reach higher a bit quicker.
+  - In the vertical battery section, be careful not to dash too quickly, you need to time your dashes properly so you can reach the next battery. Again, it's easy to lose a bunch of time to this section, so don't rush it.
+  - You can also use one or two SD storage dashes in the vertical battery section to reach higher a bit quicker.
 </details>
