--- a/levels/any_ml/pp/PP14.md
+++ b/levels/any_ml/pp/PP14.md
@@ -6,9 +6,23 @@
 
 ## Strat
 
-`Time` **00:12.750** `Difficulty` ★☆☆☆☆
+`Time` **00:11.700** `Difficulty` ★☆☆☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_Strat.mp4?raw=true)
+</details>
+
+---
+## SD storage strat
+
+`Time` **00:12.000** `Difficulty` ★★★★★
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_SDStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_SDStrat.mp4?raw=true)
+
+  **Notes**
+  - This strat uses SD Storage. You can learn more about it in the "Jump cart techs" section of this guide.
+  - This strat skips over the cutscene trigger, so it has that going for it. It looks cool, too, I guess.
 </details>
