--- a/levels/any_ml/T/T4.md
+++ b/levels/any_ml/T/T4.md
@@ -6,9 +6,12 @@
 
 ## Strat
 
-`Time` **00:10.600** `Difficulty` ★☆☆☆☆
+`Time` **00:09.800** `Difficulty` ★☆☆☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T4_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T4_Strat.mp4?raw=true)
+
+  **Notes**
+  - Try to minimize the number of wall jumps you do.
 </details>
