Added jump/voltage strats for Pipeline

--- a/levels/all_lvl/P/P0.md
+++ b/levels/all_lvl/P/P0.md
@@ -4,10 +4,20 @@
 
 [< Back (P)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P.md) | [Next (P1) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P1.md)
 
+## Voltage strat
+
+`Time` **00:09.000** `Difficulty` ★★☆☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P0_VoltageStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P0_VoltageStrat.mp4?raw=true)
+</details>
+
+---
 ## Strat
 
 `Time` **00:11.700** `Difficulty` ★★☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P0_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P0_Strat.mp4?raw=true)
