--- a/levels/all_lvl/P/P1.md
+++ b/levels/all_lvl/P/P1.md
@@ -4,10 +4,20 @@
 
 [< Back (P0)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P0.md) | [Next (P2) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P2.md)
 
+## Voltage strat
+
+`Time` **00:09.000** `Difficulty` ★★☆☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P1_VoltageStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P1_VoltageStrat.mp4?raw=true)
+</details>
+
+---
 ## Strat
 
 `Time` **00:09.900** `Difficulty` ★★☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P1_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P1_Strat.mp4?raw=true)
