--- a/levels/all_lvl/P/P4.md
+++ b/levels/all_lvl/P/P4.md
@@ -4,10 +4,20 @@
 
 [< Back (P3)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P3.md) | [Next (P5) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P5.md)
 
+## Voltage strat
+
+`Time` **00:17.400** `Difficulty` ★★★☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_VoltageStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_VoltageStrat.mp4?raw=true)
+</details>
+
+---
 ## Strat
 
 `Time` **00:18.900** `Difficulty` ★★★☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_Strat.mp4?raw=true)
