--- a/levels/all_lvl/P/P6.md
+++ b/levels/all_lvl/P/P6.md
@@ -7,10 +7,40 @@
 **Notes**
 - This is a difficult level, with very precise jumps. It's a very long level too, so a small mistake can cost you a lot. Make sure you practice it enough.
 
+## Normal exit voltage strat
+
+`Time` **00:19.500** `Difficulty` ★★★☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P6_VoltageStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P6_VoltageStrat.mp4?raw=true)
+</details>
+
+---
+## Normal exit strat
+
+`Time` **00:22.300** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P6_NormalExitStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P6_NormalExitStrat.mp4?raw=true)
+</details>
+
+---
+## Streamlined exit voltage strat
+
+`Time` **00:24.700** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P6_StreamlinedVoltageStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P6_StreamlinedVoltageStrat.mp4?raw=true)
+</details>
+
+---
 ## Streamlined exit strat
 
 `Time` **00:41.000** `Difficulty` ★★★★☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P6_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P6_Strat.mp4?raw=true)
