--- a/levels/all_lvl/A/A0.md
+++ b/levels/all_lvl/A/A0.md
@@ -24,6 +24,16 @@
 </details>
 
 ---
+## Pipeline exit voltage strat
+
+`Time` **00:12.000** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A0_PStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A0_PStrat.mp4?raw=true)
+</details>
+
+---
 ## Pipeline exit strat
 
 `Time` **00:13.400** `Difficulty` ★☆☆☆☆
