--- a/levels/all_lvl/P/P2.md
+++ b/levels/all_lvl/P/P2.md
@@ -4,10 +4,23 @@
 
 [< Back (P1)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P1.md) | [Next (P3) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P3.md)
 
+## Jump cart strat
+
+`Time` **00:13.800** `Difficulty` ★★★☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P2_JumpStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P2_JumpStrat.mp4?raw=true)
+
+  **Notes**
+  - Hold right in the third pipe to take the secret exit.
+</details>
+
+---
 ## Shortcut strat
 
 `Time` **00:16.300** `Difficulty` ★★☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P2_ShortcutStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P2_ShortcutStrat.mp4?raw=true)
