--- a/levels/all_lvl/P/P3.md
+++ b/levels/all_lvl/P/P3.md
@@ -4,10 +4,23 @@
 
 [< Back (P2)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P2.md) | [Next (P4) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P4.md)
 
+## Jump cart strat
+
+`Time` **00:06.800** `Difficulty` ★★☆☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P3_JumpStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P3_JumpStrat.mp4?raw=true)
+
+  **Notes**
+  - Wait a few frames after the level starts before jumping, or you'll risk wasting your double jump.
+</details>
+
+---
 ## Strat
 
 `Time` **00:07.800** `Difficulty` ★★☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P3_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P3_Strat.mp4?raw=true)
