--- a/levels/all_lvl/P/P5.md
+++ b/levels/all_lvl/P/P5.md
@@ -4,10 +4,20 @@
 
 [< Back (P4)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P4.md) | [Next (P6) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P6.md)
 
+## Voltage strat
+
+`Time` **00:22.000** `Difficulty` ★★★★☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P5_VoltageStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P5_VoltageStrat.mp4?raw=true)
+</details>
+
+---
 ## Strat
 
 `Time` **00:24.000** `Difficulty` ★★★☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P5_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P5_Strat.mp4?raw=true)
