--- a/levels/all_lvl/pp/PP11.md
+++ b/levels/all_lvl/pp/PP11.md
@@ -22,3 +22,13 @@
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_S_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_S_Strat.mp4?raw=true)
 </details>
+
+---
+## Voltage RF exit strat
+
+`Time` **00:13.500** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_VoltageRfExit.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_VoltageRfExit.mp4?raw=true)
+</details>
