--- a/levels/all_lvl/C/C3.md
+++ b/levels/all_lvl/C/C3.md
@@ -4,10 +4,20 @@
 
 [< Back (C2)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/C/C2.md) | [Next (C4) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/C/C4.md)
 
+## Hacked cloud exit strat
+
+`Time` **00:10.500** `Difficulty` ★☆☆☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C3_VoltageHackedCloudExit.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C3_VoltageHackedCloudExit.mp4?raw=true)
+</details>
+
+---
 ## Cloud skip strat
 
 `Time` **00:11.800** `Difficulty` ★☆☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C3_CloudSkip.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C3_CloudSkip.mp4?raw=true)
