--- a/levels/all_lvl/T/T5.md
+++ b/levels/all_lvl/T/T5.md
@@ -4,10 +4,20 @@
 
 [< Back (T4)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/T/T4.md) | [Next (C0) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/C/C0.md)
 
+## Voltage SO exit strat
+
+`Time` **00:07.800** `Difficulty` ★★★☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_VoltageSOExit.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_VoltageSOExit.mp4?raw=true)
+</details>
+
+---
 ## Corner boost strat
 
 `Time` **00:15.400** `Difficulty` ★★★☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_CornerBoostStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_CornerBoostStrat.mp4?raw=true)
