--- a/levels/any_sh/T/T3.md
+++ b/levels/any_sh/T/T3.md
@@ -18,14 +18,28 @@
 </details>
 
 ---
-## Onigiri strat
+## Risky onigiri strat
 
-`Time` **00:18.000** `Difficulty` ★☆☆☆☆
+`Time` **00:16.500** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T3_EdgeCoyoteOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T3_EdgeCoyoteOnigiri.mp4?raw=true)
+
+  **Notes**
+  - This strat uses an edge coyote (coyote timed wall jump) to grab the onigiri without falling down.
+  - The long jump from the left crumbling wall into the onigiri pit is a bit scary, but definitely saves a bit of time compared to cutting it in several jumps. If you are having trouble with this jump, make sure you let go of the wall (press Right) for a couple of frames BEFORE jumping. And don't jump from too far up, or you'll fall too fast.
+</details>
+
+---
+## Safe onigiri strat
+
+`Time` **00:18.000** `Difficulty` ★★☆☆☆
 <details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T3_Onigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T3_Onigiri.mp4?raw=true)
 
   **Notes**
-  - The long jump to the onigiri pit is a bit scary, but definitely saves a bit of time compared to cutting it in several jumps.
+  - The long jump from the left crumbling wall into the onigiri pit is a bit scary, but definitely saves a bit of time compared to cutting it in several jumps. If you are having trouble with this jump, make sure you let go of the wall (press Right) for a couple of frames BEFORE jumping. And don't jump from too far up, or you'll fall too fast.
 </details>
