Added normal onigiri strats for PP

--- a/levels/all_lvl/pp/PP10.md
+++ b/levels/all_lvl/pp/PP10.md
@@ -12,3 +12,13 @@
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP10_HookStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP10_HookStrat.mp4?raw=true)
 </details>
+
+---
+## Double onigiri strat
+
+`Time` **00:09.400** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP10_DoubleOnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP10_DoubleOnigiriStrat.mp4?raw=true)
+</details>
