--- a/levels/all_lvl/pp/PP11.md
+++ b/levels/all_lvl/pp/PP11.md
@@ -24,6 +24,16 @@
 </details>
 
 ---
+## First onigiri strat
+
+`Time` **00:07.600** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_FirstOnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_FirstOnigiriStrat.mp4?raw=true)
+</details>
+
+---
 ## Voltage RF exit strat
 
 `Time` **00:13.500** `Difficulty` ★★★☆☆
@@ -31,4 +41,17 @@
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_VoltageRfExit.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_VoltageRfExit.mp4?raw=true)
+</details>
+
+---
+## Voltage double onigiri strat
+
+`Time` **00:14.700** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_DoubleOnigiriVoltage.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_DoubleOnigiriVoltage.mp4?raw=true)
+
+  **Notes**
+  - Really tight. Consider getting the first onigiri when going through Power Plants for the first time, and then getting only the other one when you go for the Random Forest.
 </details>
