--- a/levels/all_lvl/pp/PP12.md
+++ b/levels/all_lvl/pp/PP12.md
@@ -32,3 +32,17 @@
   - In the vertical battery section, be careful not to dash too quickly, you need to time your dashes properly so you can reach the next battery. Again, it's easy to lose a bunch of time to this section, so don't rush it.
   - You can also use one or two SD storage dashes in the vertical battery section to reach higher a bit quicker.
 </details>
+
+---
+## Onigiri strat
+
+`Time` **00:15.000** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_OnigiriStrat.mp4?raw=true)
+
+  **Notes**
+  - In the vertical battery section, be careful not to dash too quickly, you need to time your dashes properly so you can reach the next battery. It's easy to lose a bunch of time to this section, so don't rush it.
+  - You can also use one or two SD storage dashes in the vertical battery section to reach higher a bit quicker.
+</details>
