--- a/levels/all_lvl/pp/PP13.md
+++ b/levels/all_lvl/pp/PP13.md
@@ -43,7 +43,7 @@
 ---
 ## Dual-cartridge strat
 
-`Time` **00:10.900** `Difficulty` ★★★☆☆
+`Time` **00:10.900** `Difficulty` ★★☆☆☆
 <details>
   <summary>Click to show/hide the strat</summary>
 
@@ -51,4 +51,14 @@
 
   **Notes**
   - The key is to use the jump but keep the dash after the second battery. It's kind of hard to chain all that together but hopefully it should be recoverable if anything goes wrong.
+</details>
+
+---
+## Onigiri strat
+
+`Time` **00:11.300** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_OnigiriStrat.mp4?raw=true)
 </details>
