--- a/levels/any_ml/pp/PP11.md
+++ b/levels/any_ml/pp/PP11.md
@@ -12,3 +12,13 @@
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_Strat.mp4?raw=true)
 </details>
+
+---
+## First onigiri strat
+
+`Time` **00:07.600** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_FirstOnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_FirstOnigiriStrat.mp4?raw=true)
+</details>
