--- a/levels/all_lvl/pp/PP14.md
+++ b/levels/all_lvl/pp/PP14.md
@@ -34,5 +34,31 @@
 
   **Notes**
   - This strat uses SD Storage. You can learn more about it in the "Jump cart techs" section of this guide.
-  - This strat skips over the cutscene trigger, so it has that going for it. It looks cool, too, I guess.
+  - This strat skips over the cutscene trigger, but it's not really faster than the normal strat. The onigiri variant is worth it, though. And it looks cool.
+  - This is a pretty lenient SD storage. You can get away with non-optimal dashes, and there is a decent chance you can fallback on the normal strat if you fail.
+</details>
+
+---
+## SD storage onigiri strat
+
+`Time` **00:12.900** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_SDSOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_SDSOnigiri.mp4?raw=true)
+
+  **Notes**
+  - This strat uses SD Storage. You can learn more about it in the "Jump cart techs" section of this guide.
+  - Note that this skips the cutscene where the glitch stops growing.
+  - This is a pretty lenient SD storage. You can get away with non-optimal dashes, and there is a decent chance you can fallback on the normal strat if you fail.
+</details>
+
+---
+## Onigiri strat
+
+`Time` **00:16.700** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_OnigiriStrat.mp4?raw=true)
 </details>
