--- a/levels/any_ml/FW/FW11.md
+++ b/levels/any_ml/FW/FW11.md
@@ -15,3 +15,16 @@
   **Notes**
   - With speedhack, run instead of voltage dashing at the start - but the amount of time saved will be minimal.
 </details>
+
+---
+## Onigiri strat
+
+`Time` **00:25.700** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/FW/FW11_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/FW/FW11_OnigiriStrat.mp4?raw=true)
+
+  **Notes**
+  - With speedhack, run instead of voltage dashing at the start - but the amount of time saved will be minimal.
+</details>
