Added basic onigiri strats for RAM and Pipeline

--- a/levels/all_lvl/P/P1.md
+++ b/levels/all_lvl/P/P1.md
@@ -22,3 +22,36 @@
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P1_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P1_Strat.mp4?raw=true)
 </details>
+
+---
+## Double onigiri voltage strat
+
+`Time` **00:20.200** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P1_DoubleOnigiriVoltage.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P1_DoubleOnigiriVoltage.mp4?raw=true)
+
+  **Notes**
+  - The top onigiri in this one takes a bit of training to get used to.
+  - Don't forget to hold up as you exit the first onigiri room!
+  - The second onigiri is a succession of branching paths. You can hold Up and Right on your way in, and on your way out, hold Left for the first one, then Down and Left. This should get you through easily.
+  - Don't forget to hold Right as you exit the second onigiri path!
+</details>
+
+---
+## Double onigiri strat
+
+`Time` **00:20.800** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P1_DoubleOnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P1_DoubleOnigiriStrat.mp4?raw=true)
+
+  **Notes**
+  - Both onigiris in this one take a bit of training to get used to.
+  - When exiting the pipe in the first onigiri room, hold Up and Left and grab the ceiling. As long as you hold Up and Left, you should be in a safe position. From there, you have to do a cable jump and cancel it quickly to enter the pipe.
+  - Don't forget to hold up as you exit the first onigiri room!
+  - The second onigiri is a succession of branching paths. You can hold Up and Right on your way in, and on your way out, hold Left for the first one, then Down and Left. This should get you through easily.
+  - Don't forget to hold Right as you exit the second onigiri path!
+</details>
