--- a/levels/all_lvl/P/P4.md
+++ b/levels/all_lvl/P/P4.md
@@ -22,3 +22,26 @@
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_Strat.mp4?raw=true)
 </details>
+
+---
+## Onigiri voltage strat
+
+`Time` **00:20.900** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_OnigiriVoltage.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_OnigiriVoltage.mp4?raw=true)
+
+  **Notes**
+  - It takes training to be able to consistently avoid the pipes with the voltage cart. A mistakenly entered pipe can sometimes be saved, but it's most likely a death. You might want to go for an easier setup on the first part.
+</details>
+
+---
+## Onigiri strat
+
+`Time` **00:22.800** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_OnigiriStrat.mp4?raw=true)
+</details>
