--- a/levels/all_lvl/P/P5.md
+++ b/levels/all_lvl/P/P5.md
@@ -22,3 +22,26 @@
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P5_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P5_Strat.mp4?raw=true)
 </details>
+
+---
+## Onigiri voltage strat
+
+`Time` **00:24.900** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P5_OnigiriVoltage.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P5_OnigiriVoltage.mp4?raw=true)
+</details>
+
+---
+## Onigiri strat
+
+`Time` **00:34.500** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P5_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P5_OnigiriStrat.mp4?raw=true)
+
+  **Notes**
+  - It would be nice to find a way to skip the back-and-forth in the last pipe, without other cartridges.
+</details>
