--- a/levels/all_lvl/P/P6.md
+++ b/levels/all_lvl/P/P6.md
@@ -37,11 +37,26 @@
 </details>
 
 ---
+## Double onigiri voltage strat
+
+`Time` **00:25.200** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P6_DoubleOnigiriVoltageStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P6_DoubleOnigiriVoltageStrat.mp4?raw=true)
+</details>
+
+---
 ## Streamlined exit strat
 
-`Time` **00:41.000** `Difficulty` ★★★★☆
+`Time` **00:38.500** `Difficulty` ★★★★☆
 <details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P6_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P6_Strat.mp4?raw=true)
+
+  **Notes**
+  - This is one of the longest strats in the guide. Don't miss the end!
+  - Obviously, if you don't need the first onigiri, you can save a bit by climbing up earlier.
+  - Near the end, after picking up the first onigiri and landing on the platform, we do a coyote jump. It's not a particularly precise one, but if you don't coyote there, you will die, so be careful. If you want to play it safe, you can use the cable cart to grab the left side of the platform instead.
 </details>
