--- a/levels/any_sh/P/P2.md
+++ b/levels/any_sh/P/P2.md
@@ -6,7 +6,7 @@
 
 ## Shortcut strat
 
-`Time` **00:16.300** `Difficulty` ★★☆☆☆
+`Time` **00:14.900** `Difficulty` ★★☆☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
@@ -14,4 +14,30 @@
 
   **Notes**
   - Hold right in the third pipe to take the secret exit.
+</details>
+
+---
+## Onigiri voltage strat
+
+`Time` **00:15.400** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P2_OnigiriVoltage.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P2_OnigiriVoltage.mp4?raw=true)
+
+  **Notes**
+  - Hold right in the third pipe to take the secret exit.
+</details>
+
+---
+## Onigiri strat
+
+`Time` **00:16.500** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P2_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P2_OnigiriStrat.mp4?raw=true)
+
+  **Notes**
+  - Hold right in the third pipe to take the secret exit. Keep holding right to fall right on the onigiri.
 </details>
