--- a/levels/any_sh/P/P4.md
+++ b/levels/any_sh/P/P4.md
@@ -12,3 +12,13 @@
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_Strat.mp4?raw=true)
 </details>
+
+---
+## Onigiri strat
+
+`Time` **00:22.800** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P4_OnigiriStrat.mp4?raw=true)
+</details>
