--- a/levels/all_lvl/P/P0.md
+++ b/levels/all_lvl/P/P0.md
@@ -22,3 +22,23 @@
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P0_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P0_Strat.mp4?raw=true)
 </details>
+
+---
+## Onigiri voltage strat
+
+`Time` **00:16.200** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P0_OnigiriVoltage.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P0_OnigiriVoltage.mp4?raw=true)
+</details>
+
+---
+## Onigiri strat
+
+`Time` **00:17.400** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P0_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P0_OnigiriStrat.mp4?raw=true)
+</details>
