--- a/levels/all_lvl/P/P3.md
+++ b/levels/all_lvl/P/P3.md
@@ -4,10 +4,23 @@
 
 [< Back (P2)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P2.md) | [Next (P4) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/P/P4.md)
 
+## Risky strat
+
+`Time` **00:06.700** `Difficulty` ★★★☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P3_RiskyStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P3_RiskyStrat.mp4?raw=true)
+
+  **Notes**
+  - The jump cancel timing when getting out of the first pipe can be hard to get right, but it saves around one second.
+</details>
+
+---
 ## Jump cart strat
 
 `Time` **00:06.800** `Difficulty` ★★☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P3_JumpStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P3_JumpStrat.mp4?raw=true)
@@ -17,11 +30,25 @@
 </details>
 
 ---
-## Strat
+## Safe strat
 
 `Time` **00:07.800** `Difficulty` ★★☆☆☆
 <details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P3_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P3_Strat.mp4?raw=true)
+</details>
+
+---
+## Onigiri strat
+
+`Time` **00:15.500** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P3_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/P/P3_OnigiriStrat.mp4?raw=true)
+
+  **Notes**
+  - Don't forget to touch the wall before the short pipe to regenerate your voltage.
+  - Alternatively, or as a backup, you can juggle with a cable jump.
 </details>
