Added T5 voltage/null onigiri SO strats

--- a/levels/all_lvl/T/T5.md
+++ b/levels/all_lvl/T/T5.md
@@ -6,11 +6,34 @@
 
 ## Voltage SO exit strat
 
-`Time` **00:07.800** `Difficulty` ★★★☆☆
+`Time` **00:07.800** `Difficulty` ★★☆☆☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_VoltageSOExit.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_VoltageSOExit.mp4?raw=true)
+</details>
+
+---
+## Left onigiri voltage SO exit strat
+
+`Time` **00:09.900** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_VoltageLeftOnigiriSO.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_VoltageLeftOnigiriSO.mp4?raw=true)
+</details>
+
+---
+## Cloud onigiri null SO exit strat
+
+`Time` **00:13.600** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_NullCloudOnigiriSO.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_NullCloudOnigiriSO.mp4?raw=true)
+
+  **Notes**
+  - This one uses the wall plug strat, with the null cart to extend the cable. See the cable strats page for more info on that technique.
 </details>
 
 ---
@@ -28,6 +51,29 @@
 </details>
 
 ---
+## Cloud onigiri voltage SO exit strat
+
+`Time` **00:15.500** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_VoltageCloudOnigiriSO.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_VoltageCloudOnigiriSO.mp4?raw=true)
+</details>
+
+---
+## Double onigiri null SO exit strat
+
+`Time` **00:15.600** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_NullDoubleOnigiriSO.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_NullDoubleOnigiriSO.mp4?raw=true)
+
+  **Notes**
+  - This one uses the wall plug strat, with the null cart to extend the cable. See the cable strats page for more info on that technique.
+</details>
+
+---
 ## Glitch jump strat
 
 `Time` **00:15.800** `Difficulty` ★★★☆☆
@@ -41,6 +87,19 @@
   - The wall jumps over the glitch blocks on the left wall look scary... and they are. You have to time your wall jumps right to make it past them. This is what makes it a difficult strat.
   - The first glitch block wall jump is pretty consistent and easy to get. For the second one, you'll have to really think about how to adjust your jump height and it might not be worth going for it.
   - Outside the tower, make sure to get the jumps across the gaps early or you'll have to stop your horizontal momentum.
+</details>
+
+---
+## Double onigiri voltage SO exit strat
+
+`Time` **00:16.900** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_NullDoubleOnigiriSO.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_NullDoubleOnigiriSO.mp4?raw=true)
+
+  **Notes**
+  - This one uses the wall plug strat, with the null cart to extend the cable. See the cable strats page for more info on that technique.
 </details>
 
 ---
