Added basic jailbreak onigiri strats

--- a/levels/all_lvl/A/A3.md
+++ b/levels/all_lvl/A/A3.md
@@ -27,6 +27,16 @@
 </details>
 
 ---
+## Jailbreak onigiri strat
+
+`Time` **00:08.900** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A3_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A3_JailbreakOnigiri.mp4?raw=true)
+</details>
+
+---
 ## Onigiri strat
 
 `Time` **00:11.500** `Difficulty` ★★☆☆☆
