--- a/levels/all_lvl/C/C1.md
+++ b/levels/all_lvl/C/C1.md
@@ -31,6 +31,29 @@
 </details>
 
 ---
+## Jailbreak onigiri intended strat
+
+`Time` **00:08.400** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C1_JailbreakOnigiriIntended.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C1_JailbreakOnigiriIntended.mp4?raw=true)
+</details>
+
+---
+## Jailbreak onigiri juggle strat
+
+`Time` **00:08.500** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C1_JailbreakOnigiriJuggle.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C1_JailbreakOnigiriJuggle.mp4?raw=true)
+
+  **Notes**
+  - You can incorporate some moves from this strat into another one, or use them as a save.
+</details>
+
+---
 ## Onigiri strat
 
 `Time` **00:13.900** `Difficulty` ★☆☆☆☆
