--- a/levels/all_lvl/T/T2.md
+++ b/levels/all_lvl/T/T2.md
@@ -17,6 +17,20 @@
 </details>
 
 ---
+## Jailbreak onigiri strat
+
+`Time` **00:11.900** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T2_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T2_JailbreakOnigiri.mp4?raw=true)
+
+  **Notes**
+  - Lots of relatively precise movement here.
+  - Near the end, in the vertical section with the crumbling platforms, the way we do it is with a neutral dash. Stop pressing Right, and when Cable Boy starts his falling animation, just press the cart action button to dash straight up. This should make you reach above the wall without touching the non-glitch blocks.
+</details>
+
+---
 ## Onigiri strat
 
 `Time` **00:21.500** `Difficulty` ★★☆☆☆
