--- a/levels/all_lvl/T/T3.md
+++ b/levels/all_lvl/T/T3.md
@@ -4,10 +4,20 @@
 
 [< Back (T2)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/T/T2.md) | [Next (T4) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/T/T4.md)
 
+## Jailbreak onigiri strat
+
+`Time` **00:06.200** `Difficulty` ★★☆☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T3_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T3_JailbreakOnigiri.mp4?raw=true)
+</details>
+
+---
 ## Strat
 
 `Time` **00:12.100** `Difficulty` ★☆☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T3_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T3_Strat.mp4?raw=true)
