--- a/levels/all_lvl/T/T4.md
+++ b/levels/all_lvl/T/T4.md
@@ -4,10 +4,25 @@
 
 [< Back (T3)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/T/T3.md) | [Next (T5) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/T/T5.md)
 
+## Jailbreak onigiri strat
+
+`Time` **00:07.700** `Difficulty` ★★☆☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T4_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T4_JailbreakOnigiri.mp4?raw=true)
+
+  **Notes**
+  - The voltage at the start is very hard, but it's hard to die if you miss it, and dying there wouldn't cost much time anyways.
+  - It's probably more reasonable to go full jump cart at the start.
+  - You can also use cable cart at almost any point to climb up to the goal.
+</details>
+
+---
 ## Strat
 
 `Time` **00:09.800** `Difficulty` ★☆☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T4_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T4_Strat.mp4?raw=true)
