--- a/levels/all_lvl/pp/PP10.md
+++ b/levels/all_lvl/pp/PP10.md
@@ -14,6 +14,16 @@
 </details>
 
 ---
+## Jailbreak strat
+
+`Time` **00:08.300** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP10_JailbreakStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP10_JailbreakStrat.mp4?raw=true)
+</details>
+
+---
 ## Double onigiri strat
 
 `Time` **00:09.400** `Difficulty` ★☆☆☆☆
