--- a/levels/all_lvl/A/A0.md
+++ b/levels/all_lvl/A/A0.md
@@ -24,6 +24,19 @@
 </details>
 
 ---
+## Jailbreak onigiri strat
+
+`Time` **00:07.600** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A0_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A0_JailbreakOnigiri.mp4?raw=true)
+
+  **Notes**
+  - The key to touch the glitch block on that first jump is to hold Up and Right and use voltage just before touching the water. The voltage should end right in front of the block. Don't hold Right for too long, you need to quickly detach, otherwise you'll fall down the wall and die.
+</details>
+
+---
 ## Pipeline exit voltage strat
 
 `Time` **00:12.000** `Difficulty` ★☆☆☆☆
