--- a/levels/all_lvl/C/C2.md
+++ b/levels/all_lvl/C/C2.md
@@ -4,10 +4,20 @@
 
 [< Back (C1)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/C/C1.md) | [Next (C3) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/C/C3.md)
 
+## Jailbreak onigiri strat
+
+`Time` **00:06.700** `Difficulty` ★☆☆☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C2_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C2_JailbreakOnigiri.mp4?raw=true)
+</details>
+
+---
 ## Cloud skip strat
 
 `Time` **00:12.100** `Difficulty` ★★★☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C2_CloudSkip.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C2_CloudSkip.mp4?raw=true)
