--- a/levels/all_lvl/T/T0.md
+++ b/levels/all_lvl/T/T0.md
@@ -4,10 +4,20 @@
 
 [< Back (T)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/T/T.md) | [Next (T1) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/T/T1.md)
 
+## Jailbreak onigiri strat
+
+`Time` **00:04.400** `Difficulty` ★☆☆☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T0_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T0_JailbreakOnigiri.mp4?raw=true)
+</details>
+
+---
 ## Strat
 
 `Time` **00:07.800** `Difficulty` ★★☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T0_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T0_Strat.mp4?raw=true)
