--- a/levels/all_lvl/T/T1.md
+++ b/levels/all_lvl/T/T1.md
@@ -4,10 +4,20 @@
 
 [< Back (T0)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/T/T0.md) | [Next (T2) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/T/T2.md)
 
+## Jailbreak onigiri strat
+
+`Time` **00:03.800** `Difficulty` ★★☆☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T1_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T1_JailbreakOnigiri.mp4?raw=true)
+</details>
+
+---
 ## Optimized strat
 
 `Time` **00:07.600** `Difficulty` ★★☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T1_OptimizedStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T1_OptimizedStrat.mp4?raw=true)
