--- a/levels/all_lvl/T/T5.md
+++ b/levels/all_lvl/T/T5.md
@@ -14,6 +14,34 @@
 </details>
 
 ---
+## Jailbreak onigiri voltage strat
+
+`Time` **00:09.500** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_JailbreakOnigiriVoltage.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_JailbreakOnigiriVoltage.mp4?raw=true)
+
+  **Notes**
+  - Destroying the crumbling blocks at the start requires you to press Left while grabbing. Be careful not to fall.
+  - If you have null cart, it's recommended to go for the null cart strat, which is almost as fast and easier.
+</details>
+
+---
+## Jailbreak onigiri null strat
+
+`Time` **00:09.700** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_JailbreakOnigiriNull.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T5_JailbreakOnigiriNull.mp4?raw=true)
+
+  **Notes**
+  - This one uses the wall plug strat, with the null cart to extend the cable. See the cable strats page for more info on that technique.
+  - Destroying the crumbling blocks at the start requires you to press Left while grabbing. Be careful not to fall.
+</details>
+
+---
 ## Left onigiri voltage SO exit strat
 
 `Time` **00:09.900** `Difficulty` ★☆☆☆☆
