--- a/levels/all_lvl/pp/PP11.md
+++ b/levels/all_lvl/pp/PP11.md
@@ -4,10 +4,20 @@
 
 [< Back (PP10)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/pp/PP10.md) | [Next (PP12) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/pp/PP12.md)
 
+## Jailbreak strat
+
+`Time` **00:05.900** `Difficulty` ★★☆☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_JailbreakStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_JailbreakStrat.mp4?raw=true)
+</details>
+
+---
 ## Strat
 
 `Time` **00:06.100** `Difficulty` ★☆☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_Strat.mp4?raw=true)
