--- a/levels/all_lvl/pp/PP12.md
+++ b/levels/all_lvl/pp/PP12.md
@@ -4,10 +4,23 @@
 
 [< Back (PP11)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/pp/PP11.md) | [Next (PP13) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/pp/PP13.md)
 
+## Jailbreak strat
+
+`Time` **00:10.800** `Difficulty` ★★★☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_JailbreakStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_JailbreakStrat.mp4?raw=true)
+
+  **Notes**
+  - It's easy to go too fast and eat a wall at a few places. Make sure to practice and identify where to be careful.
+</details>
+
+---
 ## Speedhack strat
 
 `Time` **00:12.900** `Difficulty` ★★★☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_S_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_S_Strat.mp4?raw=true)
