Added speedhack onigiri strats for A1-A5

--- a/levels/all_lvl/A/A1.md
+++ b/levels/all_lvl/A/A1.md
@@ -27,6 +27,20 @@
 </details>
 
 ---
+## Speedhack onigiri strat
+
+`Time` **00:10.100** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A1_S_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A1_S_OnigiriStrat.mp4?raw=true)
+
+  **Notes**
+  - These are 4 dashes up the wall at the start. One more will send you into the glitch blocks.
+  - For some reason, the same dashes don't work on the left wall after picking up the onigiri.
+</details>
+
+---
 ## Onigiri strat
 
 `Time` **00:13.000** `Difficulty` ★★☆☆☆
