--- a/levels/all_lvl/A/A3.md
+++ b/levels/all_lvl/A/A3.md
@@ -37,6 +37,19 @@
 </details>
 
 ---
+## Speedhack onigiri strat
+
+`Time` **00:10.800** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A3_S_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A3_S_OnigiriStrat.mp4?raw=true)
+
+  **Notes**
+  - Another strat where we kind of cheat our way to the onigiri, although this one is pretty much obvious and probably somewhat intended.
+</details>
+
+---
 ## Onigiri strat
 
 `Time` **00:11.500** `Difficulty` ★★☆☆☆
