--- a/levels/all_lvl/A/A5.md
+++ b/levels/all_lvl/A/A5.md
@@ -32,6 +32,19 @@
 </details>
 
 ---
+## Speedhack onigiri strat
+
+`Time` **00:19.500** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A5_S_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A5_S_OnigiriStrat.mp4?raw=true)
+
+  **Notes**
+  - A very optimization-heavy stage - be careful not to jump too high or too low, but you can adjust in a variety of ways if your position isn't exactly right.
+</details>
+
+---
 ## Onigiri strat
 
 `Time` **00:21.500** `Difficulty` ★★☆☆☆
