--- a/levels/all_lvl/A/A2.md
+++ b/levels/all_lvl/A/A2.md
@@ -24,6 +24,16 @@
 </details>
 
 ---
+## Speedhack onigiri strat
+
+`Time` **00:11.500** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A2_S_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A2_S_OnigiriStrat.mp4?raw=true)
+</details>
+
+---
 ## Onigiri strat
 
 `Time` **00:12.600** `Difficulty` ★☆☆☆☆
