--- a/levels/all_lvl/A/A4.md
+++ b/levels/all_lvl/A/A4.md
@@ -14,6 +14,16 @@
 </details>
 
 ---
+## Speedhack onigiri strat
+
+`Time` **00:11.600** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A4_S_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A4_S_OnigiriStrat.mp4?raw=true)
+</details>
+
+---
 ## Strat
 
 `Time` **00:12.000** `Difficulty` ★☆☆☆☆
