--- a/levels/any_sh/A/A1.md
+++ b/levels/any_sh/A/A1.md
@@ -15,3 +15,17 @@
   **Notes**
   - These are 4 dashes up the wall at the start. One more will send you into the glitch blocks.
 </details>
+
+---
+## Speedhack onigiri strat
+
+`Time` **00:10.100** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A1_S_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A1_S_OnigiriStrat.mp4?raw=true)
+
+  **Notes**
+  - These are 4 dashes up the wall at the start. One more will send you into the glitch blocks.
+  - For some reason, the same dashes don't work on the left wall after picking up the onigiri.
+</details>
