--- a/levels/any_sh/A/A2.md
+++ b/levels/any_sh/A/A2.md
@@ -12,3 +12,13 @@
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A2_S_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A2_S_Strat.mp4?raw=true)
 </details>
+
+---
+## Speedhack onigiri strat
+
+`Time` **00:11.500** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A2_S_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A2_S_OnigiriStrat.mp4?raw=true)
+</details>
