--- a/levels/any_sh/A/A3.md
+++ b/levels/any_sh/A/A3.md
@@ -12,3 +12,16 @@
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A3_S_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A3_S_Strat.mp4?raw=true)
 </details>
+
+---
+## Speedhack onigiri strat
+
+`Time` **00:10.800** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A3_S_OnigiriStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A3_S_OnigiriStrat.mp4?raw=true)
+
+  **Notes**
+  - Another strat where we kind of cheat our way to the onigiri, although this one is pretty much obvious and probably somewhat intended.
+</details>
